syntax = "proto3";

option go_package = "github.com/jackverneda/godemlia/pb";

package godemlia;

message Response {
    bool Success = 1;
}

message NodeInfo {
    bytes ID   = 1;
    string IP  = 2;
    int32 Port = 3;
}

message Request {
    string Path = 1;
    string Body = 2;
}

message StoreData{
    NodeInfo Sender = 1;
    bytes Key = 2;
    bytes Value = 3;
}

message Target {
    bytes ID    = 1;
    string Path = 2;
    int64 Init  = 3;
    int64 End   = 4;
    NodeInfo Sender = 5;
}

message KBucket {
    repeated NodeInfo Bucket = 1;
}

message FindValueResponse {
    optional KBucket KNeartestBuckets = 1;
    optional bytes Value = 2;
}

service Node {
    rpc Ping(NodeInfo)    returns (NodeInfo) {}
    rpc Store(StoreData)  returns (Response) {}
    rpc Delete(StoreData) returns (Response) {}
    rpc FindNode(Target)  returns (KBucket) {}
    rpc FindValue(Target) returns (FindValueResponse) {}
}